# summer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  verify_env.py  需求规格说明书_完整模板.doc
docs/: 2310766_模版_实习报告.doc  个人程序员日志_柯云超_2413575.md  程序员日志.md  竞品情报工程规范.md  课件第一天.docx  项目例会记录表.md  项目开发周期表.md  项目立项申请书.md  项目立项申请书模板.md
modules/: __init__.py  agents.py  prompts.py  rag_chain.py  utils.py
report/: demo.typ  main.tex  main.typ  requirements-template.typ  requirements.typ  template.typ  works.bib
summer_env/: __init__.py  common.py  verify_anthropic.py  verify_bedrock.py  verify_langsmith.py  verify_mcp.py
