[project]
name = "summer"
version = "0.1.0"
description = "Anthropic + LangChain environment managed with uv."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.116.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
mcp = [
    "anthropic[mcp]>=0.116.0",
]
bedrock = [
    "anthropic[bedrock]>=0.116.0",
]
langsmith = [
    "langsmith>=0.9.7",
]
full = [
    "anthropic[mcp,bedrock]>=0.116.0",
    "langsmith>=0.9.7",
]
