[project]
name = "summer"
version = "0.1.0"
description = "Claude Skill competitor intelligence analysis system."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic>=0.116.0",
    "beautifulsoup4>=4.12",
    "chromadb>=0.5",
    "fastapi>=0.110",
    "httpx>=0.27",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
mcp = [
    "anthropic[mcp]>=0.116.0",
]
bedrock = [
    "anthropic[bedrock]>=0.116.0",
]
langsmith = [
    "langsmith>=0.9.7",
]
full = [
    "anthropic[mcp,bedrock]>=0.116.0",
    "langsmith>=0.9.7",
]
